--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FirstActivity"></activity>
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +21,9 @@
         <activity
             android:name=".LoginActivity"
             android:label="Login Activity"></activity>
+        <activity
+            android:name=".RegistryActivity"
+            android:label="Registry Activity"></activity>
     </application>
 
 </manifest>
