Adding frame of fridge activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".RegistryActivity"
             android:label="Registry Activity"></activity>
+        <activity
+            android:name=".FridgeActivity"
+            android:label="Fridge Activity"></activity>
     </application>
 
 </manifest>
