--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
         <activity
             android:name=".FridgeActivity"
             android:label="Fridge Activity"></activity>
+        <activity
+            android:name=".ProductsActivity"
+            android:label="Product Activity"></activity>
+        <activity
+            android:name=".CreateProductActivity"
+            android:label="Create Product Activity"></activity>
     </application>
 
 </manifest>
