--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".recipe.RecipeActivity"></activity>
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +21,13 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="Login Activity"></activity>
+            android:label="Login Activity" />
         <activity
             android:name=".RegistryActivity"
-            android:label="Registry Activity"></activity>
+            android:label="Registry Activity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Main Acticity" />
     </application>
 
 </manifest>
