--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".recipe.AddRecipeActivity"></activity>
+        <activity android:name=".recipe.RecipeByIdActivity"></activity>
+        <activity android:name=".recipe.AddRecipeActivity" />
         <activity android:name=".recipe.RecipeActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
