--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -31,7 +36,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //implementation 'com.android.support:appcompat-v7:28.0.0'
-   //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -39,9 +45,10 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation "com.squareup.okhttp3:okhttp:3.13.1"
 
     //implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-   // implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    //implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     //implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
 }
