--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".ProductsActivity"
             android:label="Product Activity"></activity>
         <activity
-            android:name=".CreateProductActivity"
+            android:name=".Product.CreateProductActivity"
             android:label="Create Product Activity"></activity>
     </application>
 
