--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".recipe.RecipeByIdActivity"></activity>
-        <activity android:name=".recipe.AddRecipeActivity" />
-        <activity android:name=".recipe.RecipeActivity" />
+
+        <activity android:name=".Recipe.RecipeByIdActivity"></activity>
+        <activity android:name=".Recipe.AddRecipeActivity" />
+        <activity android:name=".Recipe.RecipeActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
