--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".ProductsActivity"
             android:label="Product Activity"></activity>
         <activity
+            android:name=".MainActivity"
+            android:label="Main Activity"></activity>
+        <activity
             android:name=".Product.CreateProductActivity"
             android:label="Create Product Activity"></activity>
 
