Changes connected with TOKEN, beacuse no login is.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
         <activity
             android:name=".Product.CreateProductActivity"
             android:label="Create Product Activity"></activity>
-
+        <activity
+            android:name=".Product.AddProductActivity"
+            android:label="Add Product Activity"></activity>
     </application>
 
 </manifest>
