--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
 
         <activity android:name=".Recipe.AddRecipeActivity" />
         <activity android:name=".Recipe.RecipeActivity" />
+        <activity android:name=".Recipe.RecipeByIdActivity" />
+
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,6 +38,9 @@
         <activity
             android:name=".ProductsActivity"
             android:label="Product Activity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="Main Activity"></activity>
         <activity
             android:name=".Product.CreateProductActivity"
             android:label="Create Product Activity"></activity>
