--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,18 +27,23 @@
             android:name=".Authorization.LoginActivity"
             android:label="Login Activity" />
         <activity
+            android:name=".Authorization.RegistryActivity"
+            android:label="Registry Activity"></activity>
+        <activity
             android:name=".MainActivity"
             android:label="Main Activity" />
-        <activity
-            android:name=".Authorization.RegistryActivity"
-
-            android:label="Registry Activity"></activity>
         <activity
             android:name=".FridgeActivity"
             android:label="Fridge Activity"></activity>
         <activity
             android:name=".ProductsActivity"
             android:label="Product Activity"></activity>
+        <activity
+            android:name=".Product.AddProductActivity"
+            android:label="Add Product Activity"></activity>
+        <activity
+            android:name=".Product.EditProductActivity"
+            android:label="Edit Product Activity"></activity>
         <activity
             android:name=".Product.CreateProductActivity"
             android:label="Create Product Activity"></activity>
